Keep concrete classes only if they are duplicates